# StrandedBot

./: .gitignore  LICENSE  README.md  bots-custom.json  bots-defaults.json  pyproject.toml  start-llama-server.sh
bots/: cli.py  game.py  game_logic.py  message_log.py  ollama_agent.py  rendering.py  start_menu.py
bots-c/: CMakeLists.txt
bots-c/resources/: bots.kra
bots-c/src/: config.c  config.h  game_logic.c  game_logic.h  http_post.c  http_post.h  llama_launcher.c  llama_launcher.h  llm_agent.c  llm_agent.h  main.c  message_log.c  message_log.h  particles.c  particles.h  rendering.c  rendering.h  start_menu.c  start_menu.h  ui_theme.c  ui_theme.h
