[project]
name = "bots"
version = "0.1.0"
description = ""
authors = [
    {name = "leonardo salvatore",email = "leonardosalvatore@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pgzero (>=1.2.1,<2.0.0)",
    "ollama (>=0.6.1,<0.7.0)"
]

[project.scripts]
bots = "bots.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
